--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Oswald:wght@700&display=swap" rel="stylesheet">
 
     <style>
 
         body {
 
-            font-family: 'Inter', sans-serif;
+            font-family: 'Roboto', sans-serif;
 
         }
 
@@ -31,6 +31,12 @@
             -webkit-box-orient: vertical;
 
             overflow: hidden;
+
+        }
+
+        h1 {
+
+            font-family: 'Oswald', sans-serif;
 
         }
 
@@ -92,21 +98,31 @@
 
            
 
-                <div class="flex items-end space-x-2">
+                <!-- Updated Button Container -->
 
-                    <button id="prev-month-btn" class="px-4 py-2 bg-red-600 text-white font-bold rounded-lg shadow-lg hover:bg-red-700 transition-colors duration-200">
+                <div class="flex flex-col items-start w-28">
 
-                        Prev
+                    <label class="text-sm font-semibold text-gray-300 mb-1 opacity-0">Buttons</label>
 
-                    </button>
+                    <div class="flex items-end space-x-2 w-full">
 
-                    <button id="next-month-btn" class="px-4 py-2 bg-red-600 text-white font-bold rounded-lg shadow-lg hover:bg-red-700 transition-colors duration-200">
+                        <button id="prev-month-btn" class="px-4 py-2 bg-red-600 text-white font-bold rounded-lg shadow-lg hover:bg-red-700 transition-colors duration-200">
 
-                        Next
+                            Prev
 
-                    </button>
+                        </button>
+
+                        <button id="next-month-btn" class="px-4 py-2 bg-red-600 text-white font-bold rounded-lg shadow-lg hover:bg-red-700 transition-colors duration-200">
+
+                            Next
+
+                        </button>
+
+                    </div>
 
                 </div>
+
+                <!-- End Updated Button Container -->
 
             </div>
 
@@ -467,5 +483,3 @@
 </body>
 
 </html>
-
- 
